data-api/overlays/data-api-inflightreq-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: data-api-inflightreq-middleware
spec:
  inFlightReq:
    amount: 100
# DDOS attack protection
